fix: fixed text overflowing on smaller screes

--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -58,7 +58,6 @@ nav{
 	}
 }
 #slide {
-    position: absolute;
     left: -10000px;
     -webkit-animation: slide 0.5s forwards;
     -webkit-animation-delay: 0s;
